Enhance SEO and improve page structure: - Updated meta descriptions and added keywords for better search visibility. - Implemented SEO component for consistent metadata across pages. - Added sitemap.xml for improved indexing by search engines. - Refactored product pages (Luce, Siena, Vitta) to include SEO metadata. - Updated robots.txt to include sitemap reference. - Added FAQ page with structured content for user inquiries. - Improved navigation accessibility with focus outlines.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orcia - Beleza na forma</title>
-    <meta name="description" content="Orcia - Cubas com design refinado, materiais nobres e acabamento impecável. Beleza na forma." />
+    <meta name="description" content="Cubas de banheiro com design refinado, materiais nobres e acabamento impecável. Beleza, funcionalidade e inspiração italiana para seu ambiente." />
     <meta name="author" content="Orcia" />
+    <meta name="keywords" content="cuba, banheiro, cuba de apoio, cuba de embutir, cuba de sobrepor, design, mármore sintético, cerâmica, orcia, lavabo, decoração, pia" />
+    <meta property="og:title" content="Orcia - Beleza na forma" />
+    <meta property="og:description" content="Cubas de banheiro com design refinado, materiais nobres e acabamento impecável. Beleza, funcionalidade e inspiração italiana para seu ambiente." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://orcia.com.br/" />
+    <meta property="og:image" content="/android-chrome-512x512.png" />
+    <meta property="og:site_name" content="Orcia" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Orcia - Beleza na forma" />
+    <meta name="twitter:description" content="Cubas de banheiro com design refinado, materiais nobres e acabamento impecável. Beleza, funcionalidade e inspiração italiana para seu ambiente." />
+    <meta name="twitter:image" content="/android-chrome-512x512.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="e8a92a8c-6650-4497-8101-118fab0d7bb7" />
-    <meta name="twitter:card" content="summary_large_image" />
   </head>
 
   <body>
